chore: update pom, has some weird formatting